k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "siri"
  namespace: "agents-cloudteam"
spec:
  selector:
    app: "siri"
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
